author alignment fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -674,6 +674,10 @@ EXTERNAL libraries look-n-feel
 	margin-right: 10px;
 }
 
+.fa-user {
+	margin-left: 10px;
+}
+
 .fa-bars {
 	color: black;
 }
